manifests/deployment.local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openefsafoodexwebcomponentfrontend
spec:
  selector:
    matchLabels:
      app: openefsafoodexwebcomponentfrontend
  template:
    metadata:
      labels:
        app: openefsafoodexwebcomponentfrontend
    spec:
      containers:
      - name: openefsafoodexwebcomponentfrontend
        image: foodex2sca:front
        # imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: openefsafoodexwebcomponentfrontendservice
spec:
  selector:
    app: openefsafoodexwebcomponentfrontend
  ports:
  - port: 8081
  type: LoadBalancer
