manifests/foodex-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openefsafoodexwebcomponentfrontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication required - Foodex Prediction'

spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: openefsafoodexwebcomponentfrontend
          servicePort: 8081
        path: /
---
